--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mapbox-gl": "^2.14.1",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
     "swr": "^2.1.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/mapbox-gl": "^2.7.11"
   }
 }
