--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "mapbox-gl": "^2.14.1",
+    "mobx": "^6.9.0",
+    "mobx-react": "^7.6.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
